--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
 <body>
   <div id="page-wrapper">
     <div id="fonts">
-      <div class="font-preview" data-font-family="BKoodak">
+      <div class="font-preview" data-font-family="BKoodakBold">
         <p>و به راستی هیچ چیز هرگز جای رفیق گمشده را پر نخواهد کرد. </p>
       </div>
       <div class="font-preview" data-font-family="BTraffic">
